force-app/main/default/objects/Volunteer__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <formula>Weight_in_kg__c / ( Height_in_Cms__c /100 * Height_in_Cms__c /100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>