force-app/main/default/objects/Volunteer__c/fields/Height_in_Cms__c.field-meta.xml
<CustomField>
    <fullName>Height_in_Cms__c</fullName>
    <label>Height in Cms</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>