force-app/main/default/objects/Volunteer__c/fields/Volu__c.field-meta.xml
<CustomField>
    <fullName>Volu__c</fullName>
    <label>Volunteer Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Telephone call -Motivate to Seminar</fullName>
            </value>
            <value>
                <fullName>Enrolled to Seminar</fullName>
            </value>
            <value>
                <fullName>Attended to Seminar</fullName>
            </value>
            <value>
                <fullName>Result after 3 months - No improvement</fullName>
            </value>
            <value>
                <fullName>Result after 3 months - Normal weight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>