force-app/main/default/objects/Volunteer__c/fields/Weight_in_kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_in_kg__c</fullName>
    <label>Weight in kg</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>