force-app/main/default/objects/Volunteer__c/validationRules/NameLengthRule.validationRule-meta.xml
<ValidationRule>
    <fullName>NameLengthRule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN  (Volunteer_Name__c ) &lt;5</errorConditionFormula>
    <errorMessage>Enter your full name</errorMessage>
</ValidationRule>